--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,54 @@
   background-size: cover;
   height: 1000px; }
   .header .container {
-    width: 1200px;
+    display: grid;
+    grid-template-columns: 2fr 3fr 1f;
+    grid-template-rows: repeat(6, auto);
+    max-width: 1200px;
     margin: 0 auto; }
+    .header .container .logo {
+      gird-column: 1 / 3;
+      grid-row: 1 / 2; }
+      .header .container .logo__icon {
+        margin-top: 1rem;
+        margin-left: 3rem;
+        margin-bottom: 0; }
+      .header .container .logo__name {
+        margin-top: 0;
+        font-size: 2rem;
+        color: white; }
+    .header .container .menu {
+      grid-column: 2 / 6;
+      grid-row: 1 / 2; }
+      .header .container .menu__list {
+        list-style-type: none;
+        display: flex;
+        margin: 2rem 2rem;
+        color: white; }
+        .header .container .menu__list > li + li {
+          margin-left: 3rem; }
+      .header .container .menu__line {
+        grid-column: 3 / 6;
+        grid-row: 1 / 2; }
+    .header .container .header__button_top {
+      grid-column: 6 / 7;
+      grid-row: 1 / 2;
+      display: inline-block; }
+    .header .container .title {
+      grid-column: 1 / 4;
+      grid-row: 2 / 3; }
+    .header .container .subtitle {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4; }
+    .header .container .header__button_middle {
+      grid-column: 1 / 3;
+      grid-row: 4 / 5; }
+    .header .container .learn-more {
+      grid-column: 1 / 4;
+      grid-row: 5 / 6; }
+    .header .container .header-bottom {
+      grid-column: 1 / 7;
+      grid-row: 6 / 7; }
 
 html {
   box-sizing: border-box;
