--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,69 @@
     background-size: cover;
     height: 1000px;
     .container {
-        width: 1200px;
+        display: grid;
+        grid-template-columns: 2fr 3fr 1f;
+        grid-template-rows: repeat(6, auto);
+        max-width: 1200px;
         margin: 0 auto;
+        .logo {
+            gird-column: 1 / 3;
+            grid-row: 1 / 2;
+            &__icon {
+                margin-top: 1rem;
+                margin-left: 3rem;
+                margin-bottom: 0;
+            }
+            &__name {
+                margin-top: 0;
+                font-size: 2rem;
+                color: white;
+            }
+        }
+        .menu {
+            grid-column: 2 / 6;
+            grid-row: 1 / 2;
+            &__list {
+                list-style-type: none;
+                display: flex;
+                margin: 2rem 2rem;
+                color: white;
+                & > li + li {
+                    margin-left: 3rem;
+                }
+            }
+            &__line {
+                grid-column: 3 / 6;
+                grid-row: 1 / 2;
+            }
+        }
+        .header__button_top {
+            grid-column: 6 / 7;
+            grid-row: 1 / 2;
+            display: inline-block;
+        }
+        .title {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+        }
+        .subtitle {
+            grid-column: 1 / 3;
+            grid-row: 3 / 4;
+        }
+        .header__button_middle {
+            grid-column: 1 / 3;
+            grid-row: 4 / 5;
+        }
+        .learn-more {
+            grid-column: 1 / 4;
+            grid-row: 5 / 6;
+        }
+        .header-bottom {
+            grid-column: 1 / 7;
+            grid-row: 6 / 7;
+        }
+
     }
+    
+
 }
