--- a/css/style.css
+++ b/css/style.css
@@ -4,53 +4,98 @@
   background-position: center center;
   background-size: cover;
   height: 1000px; }
-  .header .container {
+  .header__menu {
+    grid-column: 2 / 6;
+    grid-row: 1 / 2; }
+  .header__logo {
+    gird-column: 1 / 3;
+    grid-row: 1 / 2; }
+  .header__btn {
+    grid-column: 6 / 7;
+    grid-row: 1 / 2;
+    color: white;
+    margin-top: 1rem; }
+  .header__title {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    margin-top: 10rem;
+    margin-left: 4rem;
+    font-size: 4rem;
+    color: #fff;
+    font-weight: 700; }
+  .header__subtitle {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    margin-top: 3rem;
+    margin-left: 4rem;
+    padding-right: 14rem;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 100;
+    line-height: 2rem; }
+  .header__container {
     display: grid;
     grid-template-columns: 2fr 3fr 1f;
     grid-template-rows: repeat(6, auto);
     max-width: 1200px;
     margin: 0 auto; }
-    .header .container .logo {
-      gird-column: 1 / 3;
-      grid-row: 1 / 2; }
-      .header .container .logo__icon {
+    .header__container .logo {
+      color: white; }
+      .header__container .logo__icon {
         margin-top: 1rem;
         margin-left: 3rem;
         margin-bottom: 0; }
-      .header .container .logo__name {
-        margin-top: 0;
+        .header__container .logo__icon img {
+          filter: brightness(0) invert(1); }
+      .header__container .logo__name {
+        margin-top: -1rem;
         font-size: 2rem;
         color: white; }
-    .header .container .menu {
-      grid-column: 2 / 6;
-      grid-row: 1 / 2; }
-      .header .container .menu__list {
+    .header__container .menu {
+      color: white; }
+      .header__container .menu__list {
         list-style-type: none;
         display: flex;
-        margin: 2rem 2rem;
+        justify-content: space-between;
+        margin: 2rem 3rem 1rem 14rem;
+        padding: 0;
         color: white; }
-        .header .container .menu__list > li + li {
+        .header__container .menu__list > li + li {
           margin-left: 3rem; }
-      .header .container .menu__line {
+        .header__container .menu__list > li {
+          border-bottom: 3px solid transparent; }
+        .header__container .menu__list > li:hover {
+          border-bottom: 3px solid #f45e1f;
+          padding-bottom: 1rem;
+          margin-bottom: -1rem;
+          cursor: pointer; }
+      .header__container .menu__line {
         grid-column: 3 / 6;
-        grid-row: 1 / 2; }
-    .header .container .header__button_top {
-      grid-column: 6 / 7;
-      grid-row: 1 / 2;
-      display: inline-block; }
-    .header .container .title {
-      grid-column: 1 / 4;
-      grid-row: 2 / 3; }
-    .header .container .subtitle {
-      grid-column: 1 / 3;
-      grid-row: 3 / 4; }
-    .header .container .header__button_middle {
+        grid-row: 1 / 2;
+        margin: -1rem 3rem 1rem 14rem;
+        transform: translateY(-6%); }
+        .header__container .menu__line img {
+          display: inline-block;
+          width: 100%;
+          margin: 0;
+          padding: 0; }
+    .header__container .btn {
+      outline: none; }
+      .header__container .btn__menu {
+        padding: 1rem 1.5rem;
+        border-radius: 25px;
+        color: #f45e1f;
+        font-weight: 700;
+        background-color: #fff;
+        outline: none;
+        cursor: pointer; }
+    .header__container .header__button_middle {
       grid-column: 1 / 3;
       grid-row: 4 / 5; }
-    .header .container .learn-more {
+    .header__container .learn-more {
       grid-column: 1 / 4;
       grid-row: 5 / 6; }
-    .header .container .header-bottom {
+    .header__container .header-bottom {
       grid-column: 1 / 7;
       grid-row: 6 / 7; }
 
