--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,56 +4,113 @@
     background-position: center center;
     background-size: cover;
     height: 1000px;
-    .container {
+    &__menu {
+        grid-column: 2 / 6;
+        grid-row: 1 / 2;  
+    }
+    &__logo {
+        gird-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+    &__btn {
+        grid-column: 6 / 7;
+        grid-row: 1 / 2;
+        color: white;
+        margin-top: 1rem;
+    }
+    &__title {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        margin-top: 10rem;
+        margin-left: 4rem;
+        font-size: 4rem;
+        color: #fff;
+        font-weight: 700;
+    }
+    &__subtitle {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        margin-top: 3rem;
+        margin-left: 4rem;
+        padding-right: 14rem;
+        font-size: 1rem;
+        color: #fff;
+        font-weight: 100;
+        line-height: 2rem;
+    } 
+    &__container {
         display: grid;
         grid-template-columns: 2fr 3fr 1f;
         grid-template-rows: repeat(6, auto);
         max-width: 1200px;
         margin: 0 auto;
         .logo {
-            gird-column: 1 / 3;
-            grid-row: 1 / 2;
+            color: white;
             &__icon {
                 margin-top: 1rem;
                 margin-left: 3rem;
                 margin-bottom: 0;
+                img {
+                    filter: brightness(0) invert(1);
+                }
             }
             &__name {
-                margin-top: 0;
+                margin-top: -1rem;
                 font-size: 2rem;
                 color: white;
             }
         }
         .menu {
-            grid-column: 2 / 6;
-            grid-row: 1 / 2;
+            color: white;  
             &__list {
                 list-style-type: none;
                 display: flex;
-                margin: 2rem 2rem;
+                justify-content: space-between;
+                margin: 2rem 3rem 1rem 14rem;
+                padding: 0;
                 color: white;
                 & > li + li {
                     margin-left: 3rem;
                 }
-            }
+                & > li {
+                    border-bottom: 3px solid transparent;
+                }
+                & > li:hover {
+                    border-bottom: 3px solid #f45e1f;
+                    padding-bottom: 1rem;
+                    margin-bottom: -1rem;
+                    cursor: pointer;
+                }
+            }    
             &__line {
                 grid-column: 3 / 6;
                 grid-row: 1 / 2;
+                margin: -1rem 3rem 1rem 14rem;
+                transform: translateY(-6%);
+                img {
+                    display: inline-block;
+                    width: 100%;
+                    margin: 0;
+                    padding: 0;
+                }
+            }    
+        }
+        .btn {
+            outline: none;
+            &__menu {
+                padding: 1rem 1.5rem;
+                border-radius: 25px;
+                color: #f45e1f;
+                font-weight: 700;
+                background-color: #fff;
+                outline: none;
+                cursor: pointer;
             }
         }
-        .header__button_top {
-            grid-column: 6 / 7;
-            grid-row: 1 / 2;
-            display: inline-block;
-        }
-        .title {
-            grid-column: 1 / 4;
-            grid-row: 2 / 3;
-        }
-        .subtitle {
-            grid-column: 1 / 3;
-            grid-row: 3 / 4;
-        }
+        
+        
+        
+        
         .header__button_middle {
             grid-column: 1 / 3;
             grid-row: 4 / 5;
