--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
     grid-row: 1 / 2;
     color: white;
     margin-top: 1rem; }
+  .header__btn--bottom {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    margin-top: 3rem;
+    margin-left: 4rem; }
   .header__title {
     grid-column: 1 / 4;
     grid-row: 2 / 3;
@@ -32,7 +37,19 @@
     font-size: 1rem;
     color: #fff;
     font-weight: 100;
-    line-height: 2rem; }
+    line-height: 1.7rem; }
+  .header__learn-more {
+    grid-column: 1 / 4;
+    grid-row: 5 / 6;
+    margin-left: 4rem;
+    margin-top: 8rem; }
+  .header__bottom {
+    grid-column: 1 / 7;
+    grid-row: 6 / 7;
+    background-color: #fff;
+    width: 1200px;
+    height: 200px;
+    margin-top: 100px; }
   .header__container {
     display: grid;
     grid-template-columns: 2fr 3fr 1f;
@@ -89,15 +106,37 @@
         background-color: #fff;
         outline: none;
         cursor: pointer; }
-    .header__container .header__button_middle {
-      grid-column: 1 / 3;
-      grid-row: 4 / 5; }
+    .header__container .btn-block .btn__secondary {
+      margin-left: 2rem;
+      width: 10rem;
+      padding: 0.9rem 1.5rem;
+      border-radius: 25px;
+      color: #f45e1f;
+      font-weight: 700;
+      border: solid 0.5px #ffffff;
+      background-color: transparent;
+      color: white;
+      outline: none;
+      cursor: pointer; }
+      .header__container .btn-block .btn__secondary img {
+        display: inline-block;
+        transform: translateX(-100%) translateY(20%); }
     .header__container .learn-more {
-      grid-column: 1 / 4;
-      grid-row: 5 / 6; }
-    .header__container .header-bottom {
-      grid-column: 1 / 7;
-      grid-row: 6 / 7; }
+      color: orange; }
+      .header__container .learn-more__title {
+        color: white;
+        display: inline-block; }
+      .header__container .learn-more__line {
+        transform: translateY(-100%) translateX(15%); }
+      .header__container .learn-more__circle {
+        transform: translateY(50%) translateX(100%); }
+      .header__container .learn-more__arrow {
+        transform: translateY(50%) translateX(450%); }
+    .header__container .bottom {
+      color: grey; }
+      .header__container .bottom__title {
+        text-align: center;
+        margin-top: 1rem; }
 
 html {
   box-sizing: border-box;
