--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,6 +18,12 @@
         color: white;
         margin-top: 1rem;
     }
+    &__btn--bottom {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        margin-top: 3rem;
+        margin-left: 4rem;
+    }
     &__title {
         grid-column: 1 / 4;
         grid-row: 2 / 3;
@@ -36,8 +42,22 @@
         font-size: 1rem;
         color: #fff;
         font-weight: 100;
-        line-height: 2rem;
+        line-height: 1.7rem;
     } 
+    &__learn-more {
+        grid-column: 1 / 4;
+        grid-row: 5 / 6;
+        margin-left: 4rem;
+        margin-top: 8rem;
+    }
+    &__bottom {
+        grid-column: 1 / 7;
+        grid-row: 6 / 7;
+        background-color: #fff;
+        width: 1200px;
+        height: 200px;
+        margin-top: 100px;
+    }
     &__container {
         display: grid;
         grid-template-columns: 2fr 3fr 1f;
@@ -107,23 +127,49 @@
                 cursor: pointer;
             }
         }
-        
-        
-        
-        
-        .header__button_middle {
-            grid-column: 1 / 3;
-            grid-row: 4 / 5;
+        .btn-block {
+            .btn__secondary {
+                margin-left: 2rem;
+                width: 10rem;
+                padding: 0.9rem 1.5rem;
+                border-radius: 25px;
+                color: #f45e1f;
+                font-weight: 700;
+                border: solid 0.5px #ffffff;
+                background-color: transparent;
+                color: white;
+                outline: none;
+                cursor: pointer;
+                img {
+                    display: inline-block;
+                    transform: translateX(-100%) translateY(20%)
+                }
+            }
         }
         .learn-more {
-            grid-column: 1 / 4;
-            grid-row: 5 / 6;
+            color: orange;
+            &__title {
+                color: white;
+                display: inline-block;
+            }
+            &__line {
+                transform: translateY(-100%) translateX(15%)
+            }
+            &__circle {
+                transform: translateY(50%) translateX(100%)
+            }
+            &__arrow {
+                transform: translateY(50%) translateX(450%)
+            }
         }
-        .header-bottom {
-            grid-column: 1 / 7;
-            grid-row: 6 / 7;
+        .bottom {
+            color: grey;
+            &__title {
+                text-align: center;
+                margin-top: 1rem;
+            }
         }
-
+        
     }
     
 
