--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,9 @@
     grid-row: 6 / 7;
     background-color: #fff;
     width: 1200px;
-    height: 200px;
-    margin-top: 100px; }
+    height: 60px;
+    margin-top: 85px;
+    z-index: 1; }
   .header__container {
     display: grid;
     grid-template-columns: 2fr 3fr 1f;
@@ -137,6 +138,31 @@
       .header__container .bottom__title {
         text-align: center;
         margin-top: 1rem; }
+
+.card {
+  background-color: #f6f7fb; }
+  .card__container {
+    width: 1200px; }
+  .card__house {
+    width: 350px;
+    height: 350px;
+    background-color: #fff; }
+  .card__house--blue {
+    background-color: #273164;
+    color: white; }
+  .card .service__logo {
+    margin: 3rem 5rem 0 2rem; }
+  .card .service__title {
+    font-size: 1.5rem;
+    margin: 2rem 0 0 2rem; }
+  .card .service__info {
+    color: grey;
+    margin: 2rem 0 0 2rem; }
+  .card .service__link {
+    display: inline-block;
+    color: orange;
+    margin: 2rem 0 0 2rem;
+    text-decoration: none; }
 
 html {
   box-sizing: border-box;
