--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -55,8 +55,9 @@
         grid-row: 6 / 7;
         background-color: #fff;
         width: 1200px;
-        height: 200px;
-        margin-top: 100px;
+        height: 60px;
+        margin-top: 85px;
+        z-index: 1;
     }
     &__container {
         display: grid;
