--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   .header__btn {
     grid-column: 6 / 7;
     grid-row: 1 / 2;
-    color: white;
+    color: #fff;
     margin-top: 1rem; }
   .header__btn--bottom {
     grid-column: 1 / 3;
@@ -58,7 +58,7 @@
     max-width: 1200px;
     margin: 0 auto; }
     .header__container .logo {
-      color: white; }
+      color: #fff; }
       .header__container .logo__icon {
         margin-top: 1rem;
         margin-left: 3rem;
@@ -68,16 +68,16 @@
       .header__container .logo__name {
         margin-top: -1rem;
         font-size: 2rem;
-        color: white; }
+        color: #fff; }
     .header__container .menu {
-      color: white; }
+      color: #fff; }
       .header__container .menu__list {
         list-style-type: none;
         display: flex;
         justify-content: space-between;
         margin: 2rem 3rem 1rem 14rem;
         padding: 0;
-        color: white; }
+        color: #fff; }
         .header__container .menu__list > li + li {
           margin-left: 3rem; }
         .header__container .menu__list > li {
@@ -114,9 +114,9 @@
       border-radius: 25px;
       color: #f45e1f;
       font-weight: 700;
-      border: solid 0.5px #ffffff;
+      border: solid 0.5px #fff;
       background-color: transparent;
-      color: white;
+      color: #fff;
       outline: none;
       cursor: pointer; }
       .header__container .btn-block .btn__secondary img {
@@ -125,7 +125,7 @@
     .header__container .learn-more {
       color: orange; }
       .header__container .learn-more__title {
-        color: white;
+        color: #fff;
         display: inline-block; }
       .header__container .learn-more__line {
         transform: translateY(-100%) translateX(15%); }
@@ -142,11 +142,18 @@
 .card {
   background-color: #f6f7fb; }
   .card__container {
-    width: 1200px; }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 1200px;
+    margin: 0 auto;
+    grid-gap: 1.5rem; }
   .card__house {
+    margin: 3rem auto;
     width: 350px;
     height: 350px;
-    background-color: #fff; }
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0 0.5rem; }
   .card__house--blue {
     background-color: #273164;
     color: white; }
@@ -163,6 +170,156 @@
     color: orange;
     margin: 2rem 0 0 2rem;
     text-decoration: none; }
+
+.info {
+  background-color: #fff;
+  color: gray; }
+  .info__container {
+    width: 1200px;
+    margin: 5rem auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto; }
+  .info__title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    color: #273164; }
+  .info__text--left {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; }
+  .info__text--right {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3; }
+  .info__text--bottom {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4; }
+
+.cleaning {
+  background-color: #f6f7fb;
+  max-height: fit-content; }
+  .cleaning__container {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(8, auto); }
+  .cleaning__container:last-child {
+    margin-bottom: 5rem; }
+  .cleaning__title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    color: #273164;
+    margin-top: 30rem; }
+    .cleaning__title span {
+      display: block;
+      color: #f45e1f;
+      font-size: 1rem;
+      text-transform: uppercase;
+      margin-bottom: 1.5rem; }
+  .cleaning__info {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    color: #273164;
+    font-weight: 100; }
+  .cleaning__point--first {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    color: #273164;
+    position: relative; }
+    .cleaning__point--first::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: green;
+      -webkit-clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
+      clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      -webkit-transition: transform .3s;
+      transition: transform .3s; }
+  .cleaning__point--second {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    color: #273164;
+    margin-bottom: 5rem; }
+  .cleaning__image--right {
+    grid-column: 2 / 3;
+    grid-row: 1 / 5;
+    color: #273164; }
+  .cleaning__image--main {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: -6rem;
+    margin-left: 0;
+    padding: 0; }
+  .cleaning__image--center {
+    position: absolute;
+    top: 35%;
+    left: 20%; }
+  .cleaning__image--right {
+    margin: 8rem 0 0 5rem; }
+
+.select {
+  color: #273164;
+  background-color: #fff; }
+  .select__container {
+    width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, auto); }
+  .select__top {
+    grid-column: 1 / 2;
+    grid-row: 1 / 4; }
+  .select__bottom {
+    grid-column: 1 / 2;
+    grid-row: 4 / 7; }
+  .select__price {
+    grid-column: 2 / 3;
+    grid-row: 1 / 7;
+    color: #fff;
+    background-color: #273164; }
+
+.customers {
+  color: #273164; }
+  .customers__container {
+    width: 1200px;
+    margin: 5rem auto;
+    display: flex;
+    justify-content: space-around; }
+  .customers__item {
+    width: 350px;
+    max-height: max-content;
+    background-color: #fff; }
+
+.footer {
+  color: #273164; }
+  .footer__container {
+    width: 1200px;
+    margin: 3rem auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto; }
+  .footer__sparcle {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2; }
+  .footer__house {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2; }
+  .footer__commercial {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2; }
+  .footer__contact {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2; }
+  .footer__bottom {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; }
 
 html {
   box-sizing: border-box;
