--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -1,15 +1,22 @@
 .card {
     background-color: #f6f7fb;
     &__container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         width: 1200px;
+        margin: 0 auto;
+        grid-gap: 1.5rem;
     }
     &__house {
+        margin: 3rem auto;
         width: 350px;
         height: 350px;
         background-color: #fff;
+        border-radius: 5px;
+        padding: 0 0.5rem;
     }
     &__house--blue {
-        background-color: #273164;
+        background-color: $color-blue;
         color: white;
     }
     .service {
