--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@
     &__btn {
         grid-column: 6 / 7;
         grid-row: 1 / 2;
-        color: white;
+        color: $color-white;
         margin-top: 1rem;
     }
     &__btn--bottom {
@@ -30,7 +30,7 @@
         margin-top: 10rem;
         margin-left: 4rem;
         font-size: 4rem;
-        color: #fff;
+        color: $color-white;
         font-weight: 700;
     }
     &__subtitle {
@@ -40,7 +40,7 @@
         margin-left: 4rem;
         padding-right: 14rem;
         font-size: 1rem;
-        color: #fff;
+        color: $color-white;
         font-weight: 100;
         line-height: 1.7rem;
     } 
@@ -53,7 +53,7 @@
     &__bottom {
         grid-column: 1 / 7;
         grid-row: 6 / 7;
-        background-color: #fff;
+        background-color: $color-white;
         width: 1200px;
         height: 60px;
         margin-top: 85px;
@@ -66,7 +66,7 @@
         max-width: 1200px;
         margin: 0 auto;
         .logo {
-            color: white;
+            color: $color-white;
             &__icon {
                 margin-top: 1rem;
                 margin-left: 3rem;
@@ -78,18 +78,18 @@
             &__name {
                 margin-top: -1rem;
                 font-size: 2rem;
-                color: white;
+                color: $color-white;
             }
         }
         .menu {
-            color: white;  
+            color: $color-white;
             &__list {
                 list-style-type: none;
                 display: flex;
                 justify-content: space-between;
                 margin: 2rem 3rem 1rem 14rem;
                 padding: 0;
-                color: white;
+                color: $color-white;
                 & > li + li {
                     margin-left: 3rem;
                 }
@@ -123,7 +123,7 @@
                 border-radius: 25px;
                 color: #f45e1f;
                 font-weight: 700;
-                background-color: #fff;
+                background-color: $color-white;
                 outline: none;
                 cursor: pointer;
             }
@@ -136,9 +136,9 @@
                 border-radius: 25px;
                 color: #f45e1f;
                 font-weight: 700;
-                border: solid 0.5px #ffffff;
+                border: solid 0.5px $color-white;
                 background-color: transparent;
-                color: white;
+                color: $color-white;
                 outline: none;
                 cursor: pointer;
                 img {
@@ -150,7 +150,7 @@
         .learn-more {
             color: orange;
             &__title {
-                color: white;
+                color: $color-white;
                 display: inline-block;
             }
             &__line {
