--- a/css/style.css
+++ b/css/style.css
@@ -227,25 +227,15 @@
     grid-row: 3 / 4;
     color: #273164;
     position: relative; }
-    .cleaning__point--first::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: green;
-      -webkit-clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
-      clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
-      -webkit-transform: scale(0);
-      transform: scale(0);
-      -webkit-transition: transform .3s;
-      transition: transform .3s; }
+    .cleaning__point--first span {
+      color: orangered; }
   .cleaning__point--second {
     grid-column: 1 / 2;
     grid-row: 4 / 5;
     color: #273164;
     margin-bottom: 5rem; }
+    .cleaning__point--second span {
+      color: orangered; }
   .cleaning__image--right {
     grid-column: 2 / 3;
     grid-row: 1 / 5;
@@ -279,23 +269,138 @@
   .select__bottom {
     grid-column: 1 / 2;
     grid-row: 4 / 7; }
+    .select__bottom button {
+      background-color: rgba(128, 128, 128, 0.5);
+      color: #273164;
+      padding: .5rem 1rem;
+      border-radius: 8%;
+      margin: 1rem 1rem 1rem 0; }
+    .select__bottom #plusBed,
+    .select__bottom #minusBed,
+    .select__bottom #plusBath,
+    .select__bottom #minusBath {
+      background-color: rgba(255, 69, 0, 0.5);
+      padding: .5rem 2rem;
+      display: inline-block; }
+    .select__bottom #bed,
+    .select__bottom #bath {
+      display: inline-block;
+      margin-right: 1rem; }
   .select__price {
     grid-column: 2 / 3;
     grid-row: 1 / 7;
     color: #fff;
-    background-color: #273164; }
+    background-color: #273164;
+    text-align: left;
+    margin: 0 2rem; }
+    .select__price > * {
+      grid-column: 2 / 3;
+      grid-row: 1 / 7;
+      margin-left: 5rem; }
+    .select__price > :first-child {
+      margin-top: 2.5rem;
+      margin-bottom: 1.5rem; }
+    .select__price > :nth-child(2) {
+      margin-top: 0;
+      margin-bottom: 0.5rem;
+      font-size: .7rem; }
+    .select__price > :nth-child(3) {
+      margin-top: 0;
+      margin-bottom: 3rem;
+      font-size: .7rem; }
+    .select__price > :nth-child(4),
+    .select__price > :nth-child(5),
+    .select__price > :nth-child(6) {
+      margin-bottom: 1.5rem; }
+    .select__price > :last-child {
+      color: orangered;
+      margin-bottom: 3rem; }
+      .select__price > :last-child span {
+        font-weight: 900;
+        margin-left: 1rem; }
+    .select__price .form-group > input {
+      font-size: 0.8rem;
+      font-family: inherit;
+      padding: .5rem .7rem;
+      border-radius: 2px;
+      background-color: rgba(255, 255, 255, 0.5);
+      border-bottom: 3px solid transparent;
+      display: block;
+      width: 83%;
+      color: #fff; }
+    .select__price .form-group > input:focus {
+      border-bottom: 3px solid #fff;
+      outline: none;
+      box-shadow: 0 1rem 1rem grba(#333, 0.1); }
+    .select__price .form-group > input:focus:invalid {
+      border-bottom: 3px solid orangered; }
+    .select__price .form-group > label {
+      font-size: 0.7rem;
+      font-weight: 100;
+      margin-left: .5rem;
+      margin-top: .3rem;
+      color: lightgray; }
 
 .customers {
   color: #273164; }
   .customers__container {
     width: 1200px;
     margin: 5rem auto;
-    display: flex;
-    justify-content: space-around; }
-  .customers__item {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-gap: 1.5rem;
+    justify-items: start; }
+  .customers__title {
+    font-size: 2rem;
+    color: #273164;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: 5rem 1rem; }
+  .customers__item1 {
     width: 350px;
-    max-height: max-content;
-    background-color: #fff; }
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    background-color: #fff;
+    width: 380px;
+    height: 400px; }
+    .customers__item1:hover {
+      box-shadow: 1rem 1rem 1rem #a19d9d;
+      transition: all 1s; }
+    .customers__item1 > * {
+      margin: 2rem 2rem; }
+    .customers__item1 > :first-child {
+      margin-top: 4rem; }
+  .customers__item2 {
+    width: 350px;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    background-color: #fff;
+    width: 380px;
+    height: 400px; }
+    .customers__item2:hover {
+      box-shadow: 1rem 1rem 1rem #a19d9d;
+      transition: all 1s; }
+    .customers__item2 > * {
+      margin: 2rem 2rem; }
+    .customers__item2 > :first-child {
+      margin-top: 4rem; }
+  .customers__item3 {
+    width: 350px;
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    background-color: #fff;
+    width: 380px;
+    height: 400px; }
+    .customers__item3:hover {
+      transition: all 1s;
+      box-shadow: 1rem 1rem 1rem #a19d9d; }
+    .customers__item3 > * {
+      margin: 2rem 2rem; }
+    .customers__item3 > :first-child {
+      margin-top: 4rem; }
 
 .footer {
   color: #273164; }
@@ -304,22 +409,67 @@
     margin: 3rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto; }
+    grid-template-rows: auto auto;
+    grid-gap: 1.5rem; }
   .footer__sparcle {
     grid-column: 1 / 2;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 1.5rem; }
+    .footer__sparcle > *:not(:last-child) {
+      margin-bottom: 1.5rem;
+      color: #333; }
+    .footer__sparcle .sparcle__social > i {
+      color: orangered; }
+    .footer__sparcle .sparcle__social > i:not(:last-child) {
+      margin-right: 2rem; }
   .footer__house {
     grid-column: 2 / 3;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 1.5rem; }
+    .footer__house > a:not(:last-child) {
+      margin-bottom: 1.5rem; }
+    .footer__house > a {
+      text-decoration: none;
+      color: #333; }
   .footer__commercial {
     grid-column: 3 / 4;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 1.5rem; }
+    .footer__commercial > a:not(:last-child) {
+      margin-bottom: 1.5rem; }
+    .footer__commercial > a {
+      text-decoration: none;
+      color: #333; }
   .footer__contact {
     grid-column: 4 / 5;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 1.5rem; }
+    .footer__contact .contact__info > div {
+      margin-bottom: 1.5rem;
+      color: #333; }
+    .footer__contact .contact__info > a {
+      font-weight: 700;
+      color: orangered;
+      font-size: 1.2rem; }
   .footer__bottom {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3; }
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
+    display: block;
+    border-top: 2px solid lightgrey;
+    padding: 2rem 1rem;
+    margin-top: 3rem; }
 
 html {
   box-sizing: border-box;
