--- a/sass/_cleaning.scss
+++ b/sass/_cleaning.scss
@@ -36,20 +36,8 @@
         grid-row: 3 / 4;
         color: $color-blue;
         position: relative;
-        &::before {
-            content: '';    
-            position: absolute; 
-            top: 0; 
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: green;
-            -webkit-clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
-            clip-path: polygon(45% 64%, 84% 14%, 100% 28%, 47% 100%, 0 49%, 15% 32%);
-            -webkit-transform: scale(0);
-            transform: scale(0);
-            -webkit-transition: transform .3s;
-            transition: transform .3s;
+        span {
+            color: orangered;
         }
     }
     &__point--second {
@@ -57,6 +45,9 @@
         grid-row: 4 / 5;
         color: $color-blue;
         margin-bottom: 5rem;
+        span {
+            color: orangered;
+        }
     }
     &__image--right {
             grid-column: 2 / 3;
